<resources>
    <string name="app_name">Trivia</string>
    <string name="no_difficulty_selected">No difficulty selected.</string>
    <string name="no_category_selected">No category selected.</string>
    <string name="select_category">Select a category:</string>
    <string name="select_difficulty">Select difficulty:</string>
    <string name="start_button_text">Start Game</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="score_title">Game Score:</string>
    <string name="restart_game">Play Again</string>
    <string name="welcome_text">Trivia Game</string>
    <string name="signup">sign up</string>
    <string name="signup_title">Sign up for an Account</string>
    <string name="signup_success_text">
        Signup was a success. Please check your email to finalize your account."
    </string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="login_title">Login</string>
    <string name="log_in">log in</string>
    <string name="back_to_main">Back to Main Page</string>
    <string name="unverified_email">Check your email to verify your account.</string>
    <string name="login_success">You are successfully logged in.</string>
    <string name="start_game_btn">Start game</string>
    <string name="log_out_btn">Log out</string>
    <string name="username_title">Username:</string>
    <string name="game_actionbar_title">Player: %1$s</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="welcome">Welcome</string>
    <string name="actionbar_login_success">Login Success</string>
    <string name="top_players">Get Top Players</string>
    <string name="get_best_btn">Go</string>
    <string name="get_best_text">
        Search for the top 3 users with the highest number of perfect
    scores for a given category and difficulty.</string>
    <string name="best_players_dialog_title">
        Category: %1$s,\n Difficulty: %2$s</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_text">
        Please re-enter your email and password to delete your account.
    </string>
    <string name="deleted_account_text">Your account has been successfully deleted.</string>
    <string name="game_setup">Game Setup</string>
</resources>
