<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_best_text"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category" />
    <Button
        android:id="@+id/best_category_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_category_selected"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty" />
    <Button
        android:id="@+id/best_difficulty_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_difficulty_selected" />
    <Button
        android:id="@+id/get_best_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_best_btn"/>
</LinearLayout>