<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/category_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_category_selected"
        android:layout_gravity="center">
    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/difficulty_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/no_difficulty_selected"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_gravity="center"/>
</LinearLayout>